k8s/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: food-delivery
  labels:
    app: food-delivery
    component: kafka
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 9092
      targetPort: 9092
      protocol: TCP
      name: broker
    - port: 29092
      targetPort: 29092
      protocol: TCP
      name: internal
  selector:
    app: food-delivery
    component: kafka
